--- a/style.css
+++ b/style.css
@@ -5,29 +5,60 @@
     list-style: none; 
     text-decoration: none;
 }
+:root{
+    --primary-color: #edf2fc;
+    --secondary-color: #000;
+   
+}
+
+@media (max-width: 767px){
+    #h1{
+        font-size: 50px;
+    }
+    #img1{
+        width: 50%;
+    }
+    .foot{
+        width: 50%;
+    }
+    .lastp{
+        font-size: 20px;
+    }
+}
+
 a:hover, a:active{
     color: red;
 }
-
+.dark-theme{
+    --primary-color: #000106;
+    --secondary-color: #fff;
+}
+#icon{
+    width: 30px;
+    cursor: pointer;
+}
 .top{
     position: fixed;
     bottom: 5%;
     right: 5%;
-    color: white;
+    color: var(--primary-color);
 }
 .pot{
     position: fixed;
     bottom: 4%;
     left: 6%;
-    color: white;
+    color: var(--primary-color);
 }
 header{
     height: 100vh;
 }
+.light{
+    color: var(--primary-color);
+}
 
 body{
-    background-color: 292121;
-    color: white;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
 }
 .navbar{
     position: s;
@@ -36,7 +67,7 @@ body{
   
   top: 0;
   width: 100%; 
-  background-color: rgb(0, 0, 0); 
+  background-color: var(--secondary-color); 
 }
 .navbar-collapse{
     justify-content: center;
@@ -46,7 +77,7 @@ body{
     justify-content: center;
 }
 .icon{
-    color: white;
+    color: var(--primary-color);
 }
 .hire{
     font-size: 14px;
@@ -99,7 +130,7 @@ div ul li a:hover{
     text-align: center;
 }
 .about{
-    background-color: black;
+    background-color: var(--secondary-color);
 }
 .about-me{
     font-size: 65px;
@@ -116,7 +147,7 @@ div ul li a:hover{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #000;
+    background-color: var(--secondary-color);
     width: 100%;
 }
 .imm{
@@ -133,22 +164,5 @@ div ul li a:hover{
 div.card:hover{
    background-color: re;
 }
-<div class="container-fluid foot " style="width: 100%;">
-       
-          <div class="">
-            <a class="navbar-brand ms-3 me-4" href="#">
-              <img src="logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            </a>
-          </div>  
-          <div class="me ">
-            <a href="#!"><ion-icon name="logo-facebook" class="icon mx-1 fs-5"></ion-icon></a>
-            <a href="#!"><ion-icon name="logo-twitter" class="icon mx-1 fs-5"></ion-icon></a>
-            <a href="#!"><ion-icon name="logo-linkedin" class="icon mx-1 fs-5"></ion-icon></a>
-            <a href="#!"><ion-icon name="logo-instagram" class="icon mx-1 fs-5"></ion-icon></a>
-            <a href="#!"><ion-icon name="logo-github" class="icon mx-1 fs-5"></ion-icon></a>
-         </div> 
-         <div>
-           <p class="text-light " style="font-size: 12px;">&copy;2022 All rights reserved by Dahez</p>
-         </div>
-      </div>
+
 
