--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@
         margin: 0px auto 0px auto;
     
     }
+    .hes{
+        margin-top: 130px;
+    }
     #h1{
         font-size: 45px;
     }
