--- a/style.css
+++ b/style.css
@@ -83,7 +83,9 @@
         margin-left: 30px;
         margin-right: 10px;
     }
-
+    .hes{
+        margin-top: 130px;
+    }
 } 
 @media (min-width: 571px) and (max-width: 767px) {
     .about-image{
@@ -151,7 +153,7 @@
         margin-right: 10px;
     }
     .free{
-        font-size: 15px;
+        font-size: 14px;
         font-family: 'Times New Roman', Times, serif;
         opacity: 1;
     }
@@ -200,10 +202,14 @@
         ;
         right: 5%;
         color: var(--primary-color);
-        font-size: 12vw;
+        font-size: 5vw;
         
     }
+     .hes{
+        margin-top: 130px;
+    }
 }
+/***end of media query for extra small devices****/
 .h1_my, .h2_my{
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
